--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
 <div class="p-Errors">
   <div class="p-Errors__position">
-    <img src="https://github.com/Paintnote/error/blob/master/logo.png" alt="ロゴ" class="p-Errors__img">
+    <img src="https://github.com/Paintnote/error/blob/master/logo.png?raw=true" alt="ロゴ" class="p-Errors__img">
     <h2>一時的なエラーが発生しました</h2>
     <div class='p-Errors__text-area'>
       <p>ご不便をおかけし申し訳ございません。</p>
